--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <td width="81.25%" valign="middle">
                 <p>
                   <a href="data/double_decoder.pdf">
-                    <papertitle>Controlling the Complexity of Machine Translation Output</papertitle>
+                    <papertitle>Controlling the Reading Level of MachineTranslation Output</papertitle>
                   </a>
                   <br>
                   Kelly Marchisio,
@@ -208,7 +208,7 @@
                   <strong>Cheng-I Lai</strong>,
                   <a href="http://www.cs.jhu.edu/~phi/">Philipp Koehn</a>
                   <br>
-                  <em>Technical Report</em>, 2018
+                  <em>MT Summit</em>, 2019
                   <br>
 			        <a href="https://docs.google.com/presentation/d/1tq0PF9mV7YCRStVlGo2J1ddGp1ueOhmK5OEqRSLpfd4/edit?usp=sharing">slides</a>
                 </p>
