--- a/index.html
+++ b/index.html
@@ -284,6 +284,11 @@
               <heading>Invited Talks</heading>
               <p>
               <ul>
+                <li>Deep Learning in Artificial Intelligence, May 2019.  
+                    <br>
+                    Chinese Medicine Research Seminar, China Medical University.
+                </li>
+                <br>
                 <li><a href="https://drive.google.com/file/d/1HTzJBq7RWjxpYeyrQ54Jq5QZoanH-uWo/view?usp=sharing">Deep Learning Frameworks for Anti-Spoofing</a>, October 2018.  
                     <br>
                     Gulf Coast Undergraduate Research Symposium, Rice University.
@@ -296,7 +301,7 @@
                 <br>
                 <li><a href="https://drive.google.com/file/d/1L1cIDNbSjU2WUgRLJT0vY-TUWRMYIqB0/view?usp=sharing">Attentive Filtering Network: An Augmentation of ResNet for Audio Replay Attacks Detection</a>, August 2018.  
                     <br>
-                    Centre for Speech Technology Research Seminar, Informatics Forum, University of Edinburgh.
+                    Centre for Speech Technology Research Seminar, University of Edinburgh.
                 </li>
               </ul>  
               </p>
