--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
-              <heading>Invited Talks</heading>
+              <heading>Talks</heading>
               <p>
               <ul>
                 <li>Deep Learning in Artificial Intelligence, May 2019.  
