--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>,
                     <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a>
                   <br>
-                  Submitted to <em>Proceedings of the Annual Conference of the International Speech Communication Association (INTERSPEECH)</em>, 2019
+                  <em>Proceedings of the Annual Conference of the International Speech Communication Association (INTERSPEECH)</em>, 2019
                   <br>
                     <a href="https://arxiv.org/abs/1904.01120">arxiv</a> /
                     <a href="https://github.com/jefflai108/ASSERT">code</a> /
