--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <strong>Cheng-I Lai</strong>,
                     <a href="https://www.l2f.inesc-id.pt/w/Alberto_Abad_Gareta">Alberto Abad</a>,
                     <a href="http://homepages.inf.ed.ac.uk/korin/sitenew/index.html">Korin Richmond</a>,
-                    <a href="https://nii-yamagishilab.github.io/">Junichi Yamaghashi</a>,
+                    <a href="https://nii-yamagishilab.github.io/">Junichi Yamagishi</a>,
                     <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a>,
                     <a href="http://homepages.inf.ed.ac.uk/simonk/">Simon King</a>
                   <br>
