--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>,
                     <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a>
                   <br>
-                  <em>Proceedings of the Annual Conference of the International Speech Communication Association (INTERSPEECH)</em>, 2019
+                  <em>INTERSPEECH</em>, 2019
                   <br>
                     <a href="https://arxiv.org/abs/1904.01120">arxiv</a> /
                     <a href="https://github.com/jefflai108/ASSERT">code</a> /
@@ -236,7 +236,7 @@
                     <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a>,
                     <a href="http://homepages.inf.ed.ac.uk/simonk/">Simon King</a>
                   <br>
-                  <em>Proceedings of the IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</em>, 2019
+                  <em>ICASSP</em>, 2019
                   <br>
                     <a href="https://ieeexplore.ieee.org/abstract/document/8682640">arxiv</a> /
                     <a href="https://github.com/jefflai108/Attentive-Filtering-Network">code</a> /
@@ -264,7 +264,7 @@
                     <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>,
                     <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a>
                   <br>
-                  <em>Proceedings of the Annual Conference of the International Speech Communication Association (INTERSPEECH)</em>, 2018
+                  <em>INTERSPEECH</em>, 2018
                   <br>
                     <a href="https://www.isca-speech.org/archive/Interspeech_2018/pdfs/2394.pdf">arxiv</a> /
 			        <a href="data/nidadavolu2018investigation.bib">bibtex</a>
