--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 clai24 at mit dot edu
               </p>
               <p>
-                I will begin my Ph.D. in computer science at <a href="https://www.csail.mit.edu">MIT Computer Science and Artificial Intelligence Laboratory</a> and be advised by <a href="http://people.csail.mit.edu/jrg/">James Glass</a>, starting in Fall 2019. I received my B.S. in electrical engineering from <a href="https://www.jhu.edu">Johns Hopkins University</a>, where I was advised by <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a> and <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>. In the past, I have spent time at <a href="https://www.clsp.jhu.edu">CLSP</a>, <a href="http://www.cstr.ed.ac.uk">CSTR</a>, and <a href="https://hltcoe.jhu.edu">HLTCoE</a>. 
+                I am a computer science Ph.D. student at <a href="https://www.csail.mit.edu">MIT Computer Science and Artificial Intelligence Laboratory</a> , advised by <a href="http://people.csail.mit.edu/jrg/">James Glass</a> in the <a href="http://groups.csail.mit.edu/sls/">Spoken Language System Group</a>. I received my B.S. in electrical engineering from <a href="https://www.jhu.edu">Johns Hopkins University</a>, where I was advised by <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a> and <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>. In the past, I have spent time at <a href="https://www.clsp.jhu.edu">CLSP</a>, <a href="http://www.cstr.ed.ac.uk">CSTR</a>, <a href="https://hltcoe.jhu.edu">HLTCoE</a>, and <a href="https://www.nii.ac.jp/en/">NII</a>. 
               </p>
               <p>
                 I study spoken and natural language processing, specifically in the context of speaker recognition, machine translation, and speech synthesis.
@@ -121,7 +121,7 @@
               <heading>News</heading>
               <p>
               <ul>
-                <li>In summer 2019, I will be visiting <a href="https://www.nii.ac.jp/en/">National Institute of Informatics</a> in Tokyo, Japan.</li>
+                <li>In summer 2019, I visited <a href="https://www.nii.ac.jp/en/">National Institute of Informatics</a> in Tokyo, Japan.</li>
                 <li>In March 2019, our system was ranked 3rd in the <a href="http://www.asvspoof.org">ASVspoof 2019 Challenge</a>.</li>
                 <li>In Febuary 2019, I received Merrill Lynch Fellowship for my graduate study at MIT.</li>
                 <li>In December 2018, I received my bachelor from Johns Hopkins!</li>
@@ -199,7 +199,7 @@
             <td width="18.75%"><img src="images/double_decoder.png" align="middle" alt="double_decoder" width="150" height="198" style="border-style: none">
               <td width="81.25%" valign="middle">
                 <p>
-                  <a href="data/double_decoder.pdf">
+                  <a href="https://www.aclweb.org/anthology/W19-6619?fbclid=IwAR2P64wnPnjvHtGsljfUqKAP00E-geOLsiwSkSyydAkILm7vpljJJ_IoF9U">
                     <papertitle>Controlling the Reading Level of MachineTranslation Output</papertitle>
                   </a>
                   <br>
