--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 clai24 at mit dot edu
               </p>
               <p>
-                I am a computer science Ph.D. student at <a href="https://www.csail.mit.edu">MIT Computer Science and Artificial Intelligence Laboratory</a> , advised by <a href="http://people.csail.mit.edu/jrg/">James Glass</a> in the <a href="http://groups.csail.mit.edu/sls/">Spoken Language System Group</a>. I received my B.S. in electrical engineering from <a href="https://www.jhu.edu">Johns Hopkins University</a>, where I was advised by <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a> and <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>. In the past, I have spent time at <a href="https://www.clsp.jhu.edu">CLSP</a>, <a href="http://www.cstr.ed.ac.uk">CSTR</a>, <a href="https://hltcoe.jhu.edu">HLTCoE</a>, and <a href="https://www.nii.ac.jp/en/">NII</a>. 
+                I am a Ph.D. student in computer science at <a href="https://www.csail.mit.edu">MIT Computer Science and Artificial Intelligence Laboratory</a> , advised by <a href="http://people.csail.mit.edu/jrg/">James Glass</a> in the <a href="http://groups.csail.mit.edu/sls/">Spoken Language System Group</a>. I received my B.S. in electrical engineering from <a href="https://www.jhu.edu">Johns Hopkins University</a>, where I was advised by <a href="https://engineering.jhu.edu/ece/faculty/najim-dehak/">Najim Dehak</a> and <a href="https://www.clsp.jhu.edu/faculty/jesus-villalba/">Jesús Villalba</a>. In the past, I have spent time at <a href="https://www.clsp.jhu.edu">CLSP</a>, <a href="http://www.cstr.ed.ac.uk">CSTR</a>, <a href="https://hltcoe.jhu.edu">HLTCoE</a>, and <a href="https://www.nii.ac.jp/en/">NII</a>. 
               </p>
               <p>
                 I study spoken and natural language processing, specifically in the context of speaker recognition, machine translation, and speech synthesis.
@@ -110,7 +110,7 @@
               </p>
             </td>
             <td width="33%">
-              <img src="images/jeff_profile_pic_square_280.png">
+              <img src="images/new_profile.JPG">
             </td>
           </tr>
         </table>
