--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </p>
             </td>
             <td width="33%">
-              <img src="images/new_profile.JPG">
+              <img src="images/new_profile.png">
             </td>
           </tr>
         </table>
